CRUD of responsible

--- a/back-end/student-management-system/src/main/resources/templates/edit_responsable_form.html
+++ b/back-end/student-management-system/src/main/resources/templates/edit_responsable_form.html
@@ -33,33 +33,23 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
-				<h1 class="text-center">Add new student</h1>
+				<h1 class="text-center">Edit responsable</h1>
 				<div class="card-body">
-					<form th:action="@{/students}" th:object="${student}" method="POST">
+					<form th:action="@{/responsables/{id}(id=${responsable.id})}" th:object="${responsable}" method="POST">
 						<div class="form-group">
 							<label>Name</label>
-							<input type="text" name="name" th:field="*{name}" placeholder="Enter Student Name" class="form-control">
-							<p th:if="${#fields.hasErrors('name')}" th:errorclass="error" th:errors="*{name}"></p>
+							<input type="text" name="nameResponsable" th:field="*{nameResponsable}" placeholder="Enter Responsable Name" class="form-control">
+							<p th:if="${#fields.hasErrors('nameResponsable')}" th:errorclass="error" th:errors="*{nameResponsable}"></p>
 						</div>
 						<div class="form-group">
 							<label>CPF</label>
-							<input type="text" name="cpf" th:field="*{cpf}" placeholder="Enter Student CPF" class="form-control">
-							<p th:if="${#fields.hasErrors('cpf')}" th:errorclass="error" th:errors="*{cpf}"></p>
+							<input type="text" name="cpfResponsable" th:field="*{cpfResponsable}" placeholder="Enter Responsable CPF" class="form-control">
+							<p th:if="${#fields.hasErrors('cpfResponsable')}" th:errorclass="error" th:errors="*{cpfResponsable}"></p>
 						</div>
 						<div class="form-group">
 							<label>Email</label>
-							<input type="text" name="email" th:field="*{email}" placeholder="Enter Student Email" class="form-control">
-							<p th:if="${#fields.hasErrors('email')}" th:errorclass="error" th:errors="*{email}"></p>
-						</div>
-						<div class="form-group">
-							<label>Tuition</label>
-							<input type="number" name="tuition" th:field="*{tuition}" placeholder="Enter Student Tuition" class="form-control">
-							<p th:if="${#fields.hasErrors('tuition')}" th:errorclass="error" th:errors="*{tuition}"></p>
-						</div>
-						<div class="form-group">
-					        <select id="responsable" th:field="*{responsable}">
-				                <option th:each="responsable : ${responsables}" th:value="${responsable.id}"  th:text="${responsable.nameResponsable}"></option>
-				            </select>
+							<input type="text" name="emailResponsable" th:field="*{emailResponsable}" placeholder="Enter Responsable Email" class="form-control">
+							<p th:if="${#fields.hasErrors('emailResponsable')}" th:errorclass="error" th:errors="*{emailResponsable}"></p>
 						</div>
 						<div class="box-footer">
 							<button type="submit" class="btn btn-primary">Submit</button>
