--- a/back-end/student-management-system/src/main/resources/templates/edit_student_form.html
+++ b/back-end/student-management-system/src/main/resources/templates/edit_student_form.html
@@ -23,6 +23,9 @@
 	      <li class="nav-item">
 	        <a class="nav-link" th:href="@{/students}">Student Management</a>
 	      </li>
+	      <li>
+	      	<a class="nav-link" th:href="@{/responsables}">Responsable Management</a>
+	      </li>	      
 	    </ul>
 	  </div>
 	</nav>	
