--- a/back-end/student-management-system/src/main/resources/templates/responsables.html
+++ b/back-end/student-management-system/src/main/resources/templates/responsables.html
@@ -31,12 +31,12 @@
 
 	<div class="container">
 		<div class="row">
-			<h1>List Students</h1>
+			<h1>List Responsables</h1>
 		</div>
 		
 		<div class="row">
 			<div class="col-lg-3">
-				<a th:href = "@{/students/form}" class="btn btn-primary btn-sm mb-3">Add Student</a>
+				<a th:href = "@{/responsables/form}" class="btn btn-primary btn-sm mb-3">Add Responsable</a>
 			</div>
 		</div>
 		<table class="table table-striped table-bordered">
@@ -50,14 +50,14 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="student: ${students}">
-					<td th:text="${student.id}"></td>
-					<td th:text="${student.name}"></td>
-					<td th:text="${student.cpf}"></td>
-					<td th:text="${student.email}"></td>
+				<tr th:each="responsable: ${responsables}">
+					<td th:text="${responsable.id}"></td>
+					<td th:text="${responsable.nameResponsable}"></td>
+					<td th:text="${responsable.cpfResponsable}"></td>
+					<td th:text="${responsable.emailResponsable}"></td>
 					<td>
-						<a th:href="@{/students/edit/{id}(id=${student.id})}" class="btn btn-primary">Update</a>
-						<a th:href="@{/students/{id}(id=${student.id})}" class="btn btn-danger">Delete</a>
+						<a th:href="@{/responsables/edit/{id}(id=${responsable.id})}" class="btn btn-primary">Update</a>
+						<a th:href="@{/responsables/{id}(id=${responsable.id})}" class="btn btn-danger">Delete</a>
 					</td>
 				</tr>
 			</tbody>
