CRUD of teacher

--- a/back-end/student-management-system/src/main/resources/templates/edit_responsable_form.html
+++ b/back-end/student-management-system/src/main/resources/templates/edit_responsable_form.html
@@ -26,6 +26,9 @@
 	      <li>
 	      	<a class="nav-link" th:href="@{/responsables}">Responsable Management</a>
 	      </li>
+	      <li>
+	      	<a class="nav-link" th:href="@{/teachers}">Teacher Management</a>
+	      </li>	      
 	    </ul>
 	  </div>
 	</nav>	
