--- a/back-end/student-management-system/src/main/resources/templates/edit_student_form.html
+++ b/back-end/student-management-system/src/main/resources/templates/edit_student_form.html
@@ -25,7 +25,10 @@
 	      </li>
 	      <li>
 	      	<a class="nav-link" th:href="@{/responsables}">Responsable Management</a>
-	      </li>	      
+	      </li>
+	      <li>
+	      	<a class="nav-link" th:href="@{/teachers}">Teacher Management</a>
+	      </li>	      	      
 	    </ul>
 	  </div>
 	</nav>	
