--- a/back-end/student-management-system/src/main/resources/templates/students.html
+++ b/back-end/student-management-system/src/main/resources/templates/students.html
@@ -25,6 +25,9 @@
 	      <li>
 	      	<a class="nav-link" th:href="@{/responsables}">Responsable Management</a>
 	      </li>
+	      <li>
+	      	<a class="nav-link" th:href="@{/teachers}">Teacher Management</a>
+	      </li>	   	      
 	    </ul>
 	  </div>
 	</nav>
