--- a/back-end/student-management-system/src/main/resources/templates/teachers.html
+++ b/back-end/student-management-system/src/main/resources/templates/teachers.html
@@ -27,19 +27,19 @@
 	      </li>
 	      <li>
 	      	<a class="nav-link" th:href="@{/teachers}">Teacher Management</a>
-	      </li>	      
+	      </li>
 	    </ul>
 	  </div>
 	</nav>
 
 	<div class="container">
 		<div class="row">
-			<h1>List Responsables</h1>
+			<h1>List Teachers</h1>
 		</div>
 		
 		<div class="row">
 			<div class="col-lg-3">
-				<a th:href = "@{/responsables/form}" class="btn btn-primary btn-sm mb-3">Add Responsable</a>
+				<a th:href = "@{/teachers/form}" class="btn btn-primary btn-sm mb-3">Add Teacher</a>
 			</div>
 		</div>
 		<table class="table table-striped table-bordered">
@@ -53,14 +53,14 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="responsable: ${responsables}">
-					<td th:text="${responsable.id}"></td>
-					<td th:text="${responsable.nameResponsable}"></td>
-					<td th:text="${responsable.cpfResponsable}"></td>
-					<td th:text="${responsable.emailResponsable}"></td>
+				<tr th:each="teacher: ${teachers}">
+					<td th:text="${teacher.id}"></td>
+					<td th:text="${teacher.name}"></td>
+					<td th:text="${teacher.cpf}"></td>
+					<td th:text="${teacher.email}"></td>
 					<td>
-						<a th:href="@{/responsables/edit/{id}(id=${responsable.id})}" class="btn btn-primary">Update</a>
-						<a th:href="@{/responsables/{id}(id=${responsable.id})}" class="btn btn-danger">Delete</a>
+						<a th:href="@{/teachers/edit/{id}(id=${teacher.id})}" class="btn btn-primary">Update</a>
+						<a th:href="@{/teachers/{id}(id=${teacher.id})}" class="btn btn-danger">Delete</a>
 					</td>
 				</tr>
 			</tbody>
