--- a/back-end/student-management-system/src/main/resources/templates/home-responsable.html
+++ b/back-end/student-management-system/src/main/resources/templates/home-responsable.html
@@ -40,7 +40,7 @@
         <tbody>
 
         <tr th:each="student : ${students}">
-            <td><a th:if="${student.id}" th:href="@{/students/courses/{id}(id=${student.id})}" th:text="${student.name}"></a></td>
+            <td><a th:if="${student.id}" th:href="@{/students/courses/wh/{id}(id=${student.id})}" th:text="${student.name}"></a></td>
             <td th:text="${student.email}"></td>
             <td th:text="${student.tuition}"></td>
         </tr>
