--- a/back-end/student-management-system/src/main/resources/templates/home-students.html
+++ b/back-end/student-management-system/src/main/resources/templates/home-students.html
@@ -24,13 +24,13 @@
 	  <div class="collapse navbar-collapse" id="collapsibleNavbar">
 	    <ul class="navbar-nav">
 	      <li class="nav-item">
-	        <a class="nav-link" th:href="@{/students/courses/{id} (id=${student.id})}">Scores</a>
+	        <a class="nav-link" th:href="@{/students/courses/{id} (id=${student.id})}" th:if="${method == 'student'}">Scores</a>
 	      </li>
 	      <li>
-	      	<a class="nav-link" th:href="@{/ranking}">Ranking</a>
+	      	<a class="nav-link" th:href="@{/ranking}" th:if="${method == 'student'}">Ranking</a>
 	      </li>
 	      <li>
-	      	<a class="nav-link" th:href="@{/notices}">Notices</a>
+	      	<a class="nav-link" th:href="@{/notices}" th:if="${method == 'student'}">Notices</a>
 	      </li>
 	    </ul>
 	  </div>
