Fix navbar for responsible area

--- a/back-end/student-management-system/src/main/resources/templates/home-responsable.html
+++ b/back-end/student-management-system/src/main/resources/templates/home-responsable.html
@@ -23,6 +23,9 @@
     <!-- Navbar links -->
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
+            <li>
+                <a class="nav-link" th:href="@{/home-responsable/{id} (id=${responsable.id})}">Home</a>
+            </li>
         </ul>
     </div>
 </nav>
