--- a/back-end/student-management-system/src/main/resources/templates/home-students.html
+++ b/back-end/student-management-system/src/main/resources/templates/home-students.html
@@ -32,6 +32,9 @@
 	      <li>
 	      	<a class="nav-link" th:href="@{/notices}" th:if="${method == 'student'}">Notices</a>
 	      </li>
+			<li>
+				<a class="nav-link" th:href="@{/home-responsable/{id} (id=${responsable.id})}">Home</a>
+			</li>
 	    </ul>
 	  </div>
 	</nav>
