--- a/back-end/student-management-system/src/main/resources/templates/students.html
+++ b/back-end/student-management-system/src/main/resources/templates/students.html
@@ -6,31 +6,34 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-	
-	<nav class="navbar navbar-expand-md bg-dark navbar-dark">
-	  <!-- Brand -->
-	  <a class="navbar-brand" href="#">Student Management System</a>
-	
-	  <!-- Toggler/collapsibe Button -->
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-	    <span class="navbar-toggler-icon"></span>
-	  </button>
-	
-	  <!-- Navbar links -->
-	  <div class="collapse navbar-collapse" id="collapsibleNavbar">
-	    <ul class="navbar-nav">
-	      <li class="nav-item">
-	        <a class="nav-link" th:href="@{/students}">Student Management</a>
-	      </li>
-	      <li>
-	      	<a class="nav-link" th:href="@{/responsables}">Responsable Management</a>
-	      </li>
-	      <li>
-	      	<a class="nav-link" th:href="@{/teachers}">Teacher Management</a>
-	      </li>	   	      
-	    </ul>
-	  </div>
-	</nav>
+
+<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+	<!-- Brand -->
+	<a class="navbar-brand" href="#">Student Management System</a>
+
+	<!-- Toggler/collapsibe Button -->
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+
+	<!-- Navbar links -->
+	<div class="collapse navbar-collapse" id="collapsibleNavbar">
+		<ul class="navbar-nav">
+			<li class="nav-item">
+				<a class="nav-link" th:href="@{/students}">Student Management</a>
+			</li>
+			<li>
+				<a class="nav-link" th:href="@{/responsables}">Responsable Management</a>
+			</li>
+			<li>
+				<a class="nav-link" th:href="@{/teachers}">Teacher Management</a>
+			</li>
+			<li>
+				<a class="nav-link" th:href="@{/dashboard}">Balance</a>
+			</li>
+		</ul>
+	</div>
+</nav>
 
 	<div class="container">
 		<div class="row">
