Fix the link to students in teacher area and add page of error

--- a/back-end/student-management-system/src/main/resources/templates/home-students.html
+++ b/back-end/student-management-system/src/main/resources/templates/home-students.html
@@ -32,7 +32,7 @@
 	      <li>
 	      	<a class="nav-link" th:href="@{/notices}" th:if="${method == 'student'}">Notices</a>
 	      </li>
-			<li>
+			<li th:if="${responsable != null}">
 				<a class="nav-link" th:href="@{/home-responsable/{id} (id=${responsable.id})}">Home</a>
 			</li>
 	    </ul>
