--- a/back-end/student-management-system/src/main/resources/templates/send-notice.html
+++ b/back-end/student-management-system/src/main/resources/templates/send-notice.html
@@ -37,9 +37,8 @@
       <div class="card-body">
         <form th:action="@{/send-notice}" method="POST">
           <div class="form-group">
-            <label>Text</label>
+            <label>Type your notice here:</label>
             <textarea rows="4" cols="50" name="notice" class="form-control">
-              Type your notice here
             </textarea>
               
           </div>
