Add view to all users

--- a/back-end/student-management-system/src/main/resources/templates/responsables.html
+++ b/back-end/student-management-system/src/main/resources/templates/responsables.html
@@ -32,6 +32,9 @@
 			<li>
 				<a class="nav-link" th:href="@{/dashboard}">Balance</a>
 			</li>
+			<li>
+				<a class="nav-link" th:href="@{/users}">Users</a>
+			</li>
 		</ul>
 	</div>
 </nav>
