Add exception to empty values in student_form.html

--- a/back-end/student-management-system/src/main/resources/templates/student_form.html
+++ b/back-end/student-management-system/src/main/resources/templates/student_form.html
@@ -64,6 +64,7 @@
 				                <option th:each="responsable : ${responsables}" th:value="${responsable.id}"  th:text="${responsable.nameResponsable}"></option>   	
 				            </select>
 						</div>
+						<span th:if="${exception}" th:text="${exception}">Error</span>
 						<div class="box-footer">
 							<button type="submit" class="btn btn-primary">Submit</button>
 						</div>
