--- a/back-end/student-management-system/src/main/resources/templates/responsable_form.html
+++ b/back-end/student-management-system/src/main/resources/templates/responsable_form.html
@@ -54,6 +54,7 @@
 							<input type="text" name="emailResponsable" th:field="*{emailResponsable}" placeholder="Enter Responsable Email" class="form-control">
 							<p th:if="${#fields.hasErrors('emailResponsable')}" th:errorclass="error" th:errors="*{emailResponsable}"></p>
 						</div>
+						<span th:if="${exception}" th:text="${exception}">Error</span>
 						<div class="box-footer">
 							<button type="submit" class="btn btn-primary">Submit</button>
 						</div>
