--- a/back-end/student-management-system/src/main/resources/templates/student_form.html
+++ b/back-end/student-management-system/src/main/resources/templates/student_form.html
@@ -64,8 +64,8 @@
 				                <option th:each="responsable : ${responsables}" th:value="${responsable.id}"  th:text="${responsable.nameResponsable}"></option>   	
 				            </select>
 						</div>
-						<span th:if="${exception}" th:text="${exception}">Error</span>
-						<div class="box-footer">
+						<span th:if="${exception}" class="alert alert-danger" role="alert" th:text="${exception}">Error</span>
+						<div class="box-footer space-top">
 							<button type="submit" class="btn btn-primary">Submit</button>
 						</div>
 					</form>
