--- a/back-end/student-management-system/src/main/resources/templates/teacher_form.html
+++ b/back-end/student-management-system/src/main/resources/templates/teacher_form.html
@@ -68,8 +68,8 @@
 							<input type="number" name="salary" th:field="*{salary}" placeholder="Enter Teacher Salary" class="form-control">
 							<p th:if="${#fields.hasErrors('salary')}" th:errorclass="error" th:errors="*{salary}"></p>
 						</div>
-						<span th:if="${exception}" th:text="${exception}">Error</span>
-						<div class="box-footer">
+						<span th:if="${exception}" class="alert alert-danger" role="alert" th:text="${exception}">Error</span>
+						<div class="box-footer space-top">
 							<button type="submit" class="btn btn-primary">Submit</button>
 						</div>
 					</form>
