Add exceptions in edit teacher

--- a/back-end/student-management-system/src/main/resources/templates/edit_teacher_form.html
+++ b/back-end/student-management-system/src/main/resources/templates/edit_teacher_form.html
@@ -54,7 +54,8 @@
 							<input type="text" name="email" th:field="*{email}" placeholder="Enter Teacher Email" class="form-control">
 							<p th:if="${#fields.hasErrors('email')}" th:errorclass="error" th:errors="*{email}"></p>
 						</div>
-						<div class="box-footer">
+						<span th:if="${exception}" class="alert alert-danger" role="alert" th:text="${exception}">Error</span>
+						<div class="box-footer space-top">
 							<button type="submit" class="btn btn-primary">Submit</button>
 						</div>
 					</form>
