--- a/back-end/student-management-system/src/main/resources/templates/home-responsable.html
+++ b/back-end/student-management-system/src/main/resources/templates/home-responsable.html
@@ -33,6 +33,13 @@
 
 <div class="container">
     <h1 th:text="${responsable.nameResponsable}"></h1>
+    <div th:if="${responsable.withStudents}">
+        <p >These are the students that you have: </p>
+    </div>
+    <div th:unless="${responsable.withStudents}">
+        <h2>You dont have any student</h2>
+    </div>
+    <p th></p>
     <table class="table table-striped table-bordered">
         <thead class="table-dark">
         <tr>
